2014-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Revert last change to get -isAbsolutePath working
	on mingw again ... need to analyse startup problem.

2014-01-13  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/NSString.m: absolute paths on __MINGW__ can also start
	with "/" if GSPathHandlingRight() is YES, otherwise GNUstep config
	paths can't be used during startup.

2014-01-11  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/GSMDNSNetServices.m: minor fixes - does now properly compile
	on Windows, too.
	NOTE:
	If you want to link against Apple's Bonjour SDK on Windows, you have
	to convert the dnssd.lib from MSVC/__stdcall format to GCC/__cdecl
	and provide the result as libdns_sd.a. Also, DNSSD_API in dns_sd.h
	needs to be defined empty.

2014-01-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: The NSDeveloperDirectory key is deprecated
	on OSX, but lets use it for the development system root.
	On windows systems this should be the root of the msys filesystem
	found relative to the current process if possible, but otherwise
	with the GNUstep packages installed, found relative to the
	installation directory.
	In other cases (no specific development environment found) the
	system root directory is returned.

2014-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m:
	On mingw a file is executable if its extension is in the list
	provided by the PATHEXT environment variable.
	* Source/NSTask.m:
	Simplification/clarification suggested by Riccardo

2014-01-08  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSValueTransformer (+valueTransformerForName:): Fixed to 
	automatically register any available NSValueTransformer subclass that 
	matches  the given name and is not yet registered. This behavior is 
	described in the Cocoa API documentation.

2014-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUUID.m:
	* Source/Additions/NSData+GNUstepBase.m: 