@@ -416,13 +416,16 @@ notice and this notice are preserved.
 	    <term>HOMEDRIVE</term>
 	    <desc>
 	      <p>
-		Used on ms-windows to locate the home directory.
+		Used on ms-windows to locate the home directory if the
+		HOMEPATH environment variable is also used.
 	      </p>
 	    </desc>
 	    <term>HOMEPATH</term>
 	    <desc>
 	      <p>
-		Used on ms-windows to locate the home directory.
+		Used on ms-windows to locate the home directoryb in
+		conjunction with HOMEDRIVE.  If this is just a backslash
+		then the USERPROFILE variable is used if possible.
 	      </p>
 	    </desc>
             <term>LANGUAGES</term>
@@ -506,6 +509,14 @@ notice and this notice are preserved.
 		mechanism is to use the 'Local Time Zone' value from the
 		user defaults system.
 	      </p>
+
+	    <term>USERPROFILE</term>
+	    <desc>
+	      <p>
+		Used on windows to identify the home directory of the
+		current used (unless HOMEPATH and HOMEDRIVE are set to
+		point to an individual user's home).
+	      </p>
 	    </desc>
 
 	  </deflist>
@@ -521,7 +532,10 @@ notice and this notice are preserved.
 	    configured and/or what operating system it was configured on.
 	    On a GNU/Linux system, the default would be
 	    /etc/GNUstep/GNUstep.conf for instance, while on mswindows
-	    it would be ./GNUstep.conf.
+	    it would be ./GNUstep.conf (the leading './' here indicates
+	    that the file is located relative to the base library, on
+	    windows this is the location of the base library DLL, which
+	    is normally the same location as command line tools).
 	  </p>
           <p>
             If setting up GNUstep in a sandbox for packaging it as part
@@ -542,8 +556,8 @@ notice and this notice are preserved.
 	    (ie in a target/deployment environment).<br />
 	    In particular it is normal for the two files to differ on
 	    mswindows (where the build environment is an UNIX-like MSYS
-	    shell, using unix style paths, but the deployment environment
-	    is native-windows using windows style paths).
+	    shell, using the its own paths, but the deployment environment
+	    is native-windows using real windows paths).
 	  </p>
 	  <p>
 	    The location of the GNUstep configuration file can be specified
@@ -641,6 +655,13 @@ notice and this notice are preserved.
 	    '%u' is replaced by the user name<br />
 	    '%i' is replaced by the user ID<br />
 	    '%%' is replaced by a single '%'<br />
+	  </p>
+	  <p>
+	    The GNUSTEP_DEVELOPER_DIR path may be used to specify where
+	    the development system is located.  On most systems this
+	    should be the default value of '/', but on windows it should
+	    be the location of the msys/mingw filesystem (so that msys
+	    development tools can be found).
 	  </p>
 	  <p>
 	    Other paths for each user are defined by the following:
